# my-ex-review-service

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
k8s/: db-deployment.yaml  deployment.yaml  service.yaml
migrations/: 001_init.sql
src/: handlers.rs  lib.rs  main.rs  models.rs  routes.rs
src/repository/: mod.rs  review_repository.rs
src/service/: mod.rs  review_service.rs
tests/: api_tests.rs  repository_tests.rs  service_tests.rs
