[package]
name = "my-ex-review-service"
version = "1.0.0"
edition = "2021"
description = "Review / Analytics microservice - Rust Axum"

[lib]
name = "my_ex_review_service"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum", "vendored"] }

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
ctor = "0.2"
dotenvy = "0.15"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
